# First_aid_chatbot

./: README.md  app.py  pyproject.toml  requirements.txt
src/first_aid_chatbot/: Assignment_Data_Base.csv  __init__.py  client.py  documentSearch.py  embedings_store.ipynb  webSearch.py
